clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr60822.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr60822.c" (c, x86_64-unknown-linux-gnu)
global x : rec_X = Zero { ty: Named("rec_X") } [external, default, align 4, dso_local]

fn Avg(%arg0: rec_X*, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_X*, %arg1: s32i):
        %19 = alloca rec_X*, "p", align 8
        %20 = alloca s32i, "s", align 4
        %21 = alloca s32i, "__retval", align 4
        store %arg0, %19
        store %arg1, %20
        %22 = load %20 : s32i, align 4
        %23 = cast(integral) %22 : s64i
        %24 = load %19 : rec_X*, align 8
        get_member
        %26 = load %25 : s32i, align 4
        %27 = load %19 : rec_X*, align 8
        get_member
        %29 = load %28 : s32i, align 4
        %30 = add %26, %29 : s32i [nsw]
        %31 = cast(integral) %30 : s64i
        mul
        %33 = const 17 : s32i
        shift
        %35 = cast(integral) %34 : s32i
        store %35, %21
        %36 = load %21 : s32i
        return %36
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = const 17 : s32i
        shift
        %5 = get_global @x : rec_X*
        get_member
        store %4, %6, align 4
        %7 = const 2 : s32i
        %8 = const 17 : s32i
        shift
        %10 = get_global @x : rec_X*
        get_member
        store %9, %11, align 4
        scope {
                %14 = get_global @x : rec_X*
                %15 = const 1 : s32i
                %16 = call @Avg(%14, %15) : s32i [all]
                %17 = const 3 : s32i
                cmp
                if %18 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %12 = const 0 : s32i
        store %12, %0
        %13 = load %0 : s32i
        return %13
}
