clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr61673.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr61673.c" (c, x86_64-unknown-linux-gnu)
global __const.main.c : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Array([CirInt { ty: Named("s8i"), value: "84" }, CirInt { ty: Named("s8i"), value: "-121" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global e : s8i = CirInt { ty: Named("s8i"), value: "0" } [external, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn bar(%arg2: s8i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s8i):
        %83 = alloca s8i, "x", align 1
        store %arg2, %83
        scope {
                %84 = load %83 : s8i, align 1
                %85 = cast(integral) %84 : s32i
                %86 = const 84 : s32i
                cmp
                %88 = ternary %87 ? { : bool
                        %90 = load %83 : s8i, align 1
                        %91 = cast(integral) %90 : s32i
                        %92 = const -121 : s32i
                        cmp
                        yield %93
                } : {
                        %89 = const false : bool
                        yield %89
                }
                if %88 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn foo(%arg1: s8i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s8i*):
        %60 = alloca s8i*, "x", align 8
        %61 = alloca s8i, "d", align 1
        %62 = alloca s32i, "c", align 4
        store %arg1, %60
        %63 = const 0 : s64i
        %64 = load %60 : s8i*, align 8
        ptr_stride
        %66 = load %65 : s8i, align 1
        store %66, %61, align 1
        %67 = load %61 : s8i, align 1
        %68 = cast(integral) %67 : s32i
        store %68, %62, align 4
        scope {
                %70 = load %62 : s32i, align 4
                %71 = const 0 : s32i
                cmp
                %73 = ternary %72 ? { : bool
                        %80 = load %62 : s32i, align 4
                        %81 = const 127 : s32i
                        cmp
                        yield %82
                } : {
                        %79 = const false : bool
                        yield %79
                }
                %74 = cast(bool_to_int) %73 : s32i
                %75 = const 0 : s32i
                cmp
                if %76 {
                        %77 = load %61 : s8i, align 1
                        %78 = get_global @e : s8i*
                        store %77, %78, align 1
                        yield
                }
                yield
        }
        %69 = load %61 : s8i, align 1
        call @bar(%69) [all]
        return
}
fn baz(%arg0: s8i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*):
        %38 = alloca s8i*, "x", align 8
        %39 = alloca s8i, "d", align 1
        %40 = alloca s32i, "c", align 4
        store %arg0, %38
        %41 = const 0 : s64i
        %42 = load %38 : s8i*, align 8
        ptr_stride
        %44 = load %43 : s8i, align 1
        store %44, %39, align 1
        %45 = load %39 : s8i, align 1
        %46 = cast(integral) %45 : s32i
        store %46, %40, align 4
        scope {
                %47 = load %40 : s32i, align 4
                %48 = const 0 : s32i
                cmp
                %50 = ternary %49 ? { : bool
                        %57 = load %40 : s32i, align 4
                        %58 = const 127 : s32i
                        cmp
                        yield %59
                } : {
                        %56 = const false : bool
                        yield %56
                }
                %51 = cast(bool_to_int) %50 : s32i
                %52 = const 0 : s32i
                cmp
                if %53 {
                        %54 = load %39 : s8i, align 1
                        %55 = get_global @e : s8i*
                        store %54, %55, align 1
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[2], "c", align 1
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.c : s8i[2]*
        copy
        %4 = const 33 : s8i
        %5 = get_global @e : s8i*
        store %4, %5, align 1
        %6 = cast(array_to_ptrdecay) %1 : s8i*
        call @foo(%6) [all]
        scope {
                %33 = get_global @e : s8i*
                %34 = load %33 : s8i, align 1
                %35 = cast(integral) %34 : s32i
                %36 = const 33 : s32i
                cmp
                if %37 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = cast(array_to_ptrdecay) %1 : s8i*
        %8 = const 1 : s32i
        ptr_stride
        call @foo(%9) [all]
        scope {
                %28 = get_global @e : s8i*
                %29 = load %28 : s8i, align 1
                %30 = cast(integral) %29 : s32i
                %31 = const -121 : s32i
                cmp
                if %32 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %10 = const 33 : s8i
        %11 = get_global @e : s8i*
        store %10, %11, align 1
        %12 = cast(array_to_ptrdecay) %1 : s8i*
        call @baz(%12) [all]
        scope {
                %23 = get_global @e : s8i*
                %24 = load %23 : s8i, align 1
                %25 = cast(integral) %24 : s32i
                %26 = const 33 : s32i
                cmp
                if %27 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %13 = cast(array_to_ptrdecay) %1 : s8i*
        %14 = const 1 : s32i
        ptr_stride
        call @baz(%15) [all]
        scope {
                %18 = get_global @e : s8i*
                %19 = load %18 : s8i, align 1
                %20 = cast(integral) %19 : s32i
                %21 = const -121 : s32i
                cmp
                if %22 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %16 = const 0 : s32i
        store %16, %0
        %17 = load %0 : s32i
        return %17
}
