clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr61682.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr61682.c" (c, x86_64-unknown-linux-gnu)
global a : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global c : s32i* = GlobalView { ty: Pointer { pointee: Named("s32i"), addr_space: None }, symbol: "b", indices: None } [internal, default, align 8, dso_local]
global b : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i*, "d", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @a : s32i*
        store %3, %1, align 8
        scope {
                %10 = const 0 : s32i
                %11 = get_global @a : s32i*
                store %10, %11, align 4
                for cond {
                        %23 = get_global @a : s32i*
                        %24 = load %23 : s32i, align 4
                        %25 = const 12 : s32i
                        cmp
                        condition %26
                } step {
                        %12 = get_global @a : s32i*
                        %13 = load %12 : s32i, align 4
                        inc
                        store %14, %12, align 4
                        yield
                } body {
                        %15 = load %1 : s32i*, align 8
                        %16 = load %15 : s32i, align 4
                        %17 = const 9 : s32i
                        div
                        %19 = get_global @c : s32i**
                        %20 = load %19 : s32i*, align 8
                        %21 = load %20 : s32i, align 4
                        or
                        store %22, %20, align 4
                        yield
                }
                yield
        }
        scope {
                %6 = get_global @b : s32i*
                %7 = load %6 : s32i, align 4
                %8 = const 1 : s32i
                cmp
                if %9 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
