clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr61725.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr61725.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        scope {
                %5 = const -128 : s32i
                store %5, %1, align 4
                for cond {
                        %19 = load %1 : s32i, align 4
                        %20 = const 128 : s32i
                        cmp
                        condition %21
                } step {
                        %6 = load %1 : s32i, align 4
                        inc
                        store %7, %1, align 4
                        yield
                } body {
                        scope {
                                %8 = alloca s32i, "a", align 4
                                %9 = load %1 : s32i, align 4
                                ffs
                                store %10, %8, align 4
                                scope {
                                        %11 = load %1 : s32i, align 4
                                        %12 = const 0 : s32i
                                        cmp
                                        %14 = ternary %13 ? { : bool
                                                %16 = load %8 : s32i, align 4
                                                %17 = const 0 : s32i
                                                cmp
                                                yield %18
                                        } : {
                                                %15 = const false : bool
                                                yield %15
                                        }
                                        if %14 {
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %3 = const 0 : s32i
        store %3, %0
        %4 = load %0 : s32i
        return %4
}
